小程序自定义组件

--- a/小程序/3.小程序内置组件.md
+++ b/小程序/3.小程序内置组件.md
@@ -104,3 +104,15 @@ Image 组件用于显示图片
 </style>
 ```
 
+## 公共属性
+
+> [基础组件](https://developers.weixin.qq.com/miniprogram/dev/framework/view/component.html)
+
+![image-20231007091846722](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231007091846722.png)
+
+## input组件
+
+```html
+<input type="text" model:value="{{message}}" />
+```
+
