--- a/小程序/6.小程序组件化开发.md
+++ b/小程序/6.小程序组件化开发.md
@@ -67,6 +67,8 @@ Component({
 
 ## 组件的通信
 
+> [https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/events.html](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/events.html)
+
 很多情况下，组件内展示的内容（数据、样式、标签），并不是在组件内写死的，而且可以由使用者来决定
 
 ![image-20231007181153386](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231007181153386.png)
@@ -112,3 +114,114 @@ Component({
 有时候是自定义组件内部发生了事件，需要告知使用者，这个时候可以使用自定义事件
 
 ![image-20231008165536798](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231008165536798.png)
+
+### 页面直接调用组件方法
+
+可在父组件里调用 `this.selectComponent`，获取子组件的实例对象
+
+![image-20231009090032598](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231009090032598.png)
+
+## 插槽
+
+> [https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/wxml-wxss.html](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/wxml-wxss.html)
+
+slot 翻译为插槽：
+
+- 在生活中很多地方都有插槽，电脑的 USB 插槽，插板当中的电源插槽
+- 插槽的目的是让我们原来的设备具备更多的扩展性
+- 比如电脑的 USB 我们可以插入U盘、硬盘、手机、音响、键盘、鼠标等等
+
+组件的插槽：
+
+- 组件的插槽也是为了让我们封装的组件更加具有扩展性
+- 让使用者可以决定组件内部的一些内容到底展示什么
+
+### 单个插槽
+
+除了内容和样式可能由外界决定之外，也可能外界想决定显示的方式
+
+- 比如我们有一个组件定义了头部和尾部，但是中间的内容可能是一段文字，也可能是一张图片，或者是一个进度条
+- 在不确定外界想插入什么其他组件的前提下，我们可以在组件内预留插槽
+
+小程序中插槽是不支持默认值的
+
+```html
+<view class="content">
+  <!-- 如下是不生效的 -->
+  <slot>哈哈哈</slot>
+</view>
+<view class="default">哈哈哈</view>
+
+<style>
+.default {
+  display: none;
+}
+.content:empty + .default {
+  display: block;
+}
+</style>
+```
+
+### 多个插槽
+
+有时候为了让组件更加灵活, 我们需要定义多个插槽
+
+![image-20231009092957372](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231009092957372.png)
+
+## 代码复用
+
+### behaviors
+
+> [https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
+
+behaviors 是用于组件间代码共享的特性，类似于一些编程语言中的 "mixins"
+
+- 每个 behavior 可以包含一组属性、数据、生命周期函数和方法
+- 组件引用它时，它的属性、数据和方法会被合并到组件中，生命周期函数也会在对应时机被调用
+- 每个组件可以引用多个 behavior ，behavior 也可以引用其它 behavior
+
+![image-20231009104023749](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231009104023749.png)
+
+### 组件生命周期
+
+> [https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
+
+组件的生命周期，指的是组件自身的一些函数，这些函数在特殊的时间点或遇到一些特殊的框架事件时被自动触发
+
+- 其中，最重要的生命周期是 created attached detached ，包含一个组件实例生命流程的最主要时间点
+
+自小程序基础库版本 2.2.3 起，组件的的生命周期也可以在 lifetimes 字段内进行声明（这是推荐的方式，其优先级最高）
+
+![image-20231009104921519](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231009104921519.png)
+
+```js
+Component({
+  lifetimes: {
+    created() {
+      console.log('组件被创建created')
+    },
+    attached() {
+      console.log('组件被添加到组件数中atttached')
+    },
+    detached() {
+      console.log('组件被移除组件树中derached')
+    }
+  }
+})
+```
+
+### 组件所在页面的生命周期
+
+还有一些特殊的生命周期，它们并非与组件有很强的关联，但有时组件需要获知，以便组件内部处理
+
+- 这样的生命周期称为 "组件所在页面的生命周期"，在 pageLifetimes 定义段中定义
+
+其中可用的生命周期包括：
+
+![image-20231009105313508](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231009105313508.png)
+
+## Component构造器
+
+![image-20231009105426548](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231009105426548.png)
+
+![image-20231009105445974](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231009105445974.png)
