--- a/SSR/1.Node服务端渲染+SSR.md
+++ b/SSR/1.Node服务端渲染+SSR.md
@@ -87,13 +87,13 @@ SSG 的缺点：
 服务器端渲染全称是：Server Side Render，在服务器端渲染页面，并将渲染好的 HTML 返回给浏览器呈现
 
 - SSR 应用的页面是在服务端渲染的，用户每请求一个 SSR 页面都会先在服务端进行渲染，然后将渲染好的页面，返回给浏览器呈现
-- 构建 SSR 应用常见的库和框架有：Vue Nut、React Next.js 等（SSR 应用也称同构应用）
+- 构建 SSR 应用常见的库和框架有：Vue Nuxt、React Next.js 等（SSR 应用也称同构应用）
 
 服务器端渲染原理
 
 ![image-20231026144626251](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231026144626251.png)
 
-SSR优点
+SSR 优点
 
 - 更快的首屏渲染速度
   - 浏览器显示静态页面的内容要比 JavaScript 动态生成的内容快得多
@@ -103,7 +103,7 @@ SSR优点
   - 这样有利于爬虫快速抓取网页内容，并编入索引，有利于SEO
 - SSR 应用程序在 Hydration 之后依然可以保留 Web 应用程序的交互性。比如: 前端路由、响应式数据、虚拟 DOM 等
 
-SSR缺点
+SSR 缺点
 
 - SSR 通常需要对服务器进行更多 API 调用，以及在服务器端染需要消耗更多的服务器资源，成本高
 - 增加了一定的开发成本，用户需要关心哪些代码是运行在服务器端，哪些代码是运行在浏览器端
