--- a/SSR/3.Nuxt3核心语法.md
+++ b/SSR/3.Nuxt3核心语法.md
@@ -131,3 +131,7 @@ definePageMeta({
 - 客户端渲染模式（CSR）：只需将 ssr 设置为 false
 - 服务器端渲染模式（SSR）：只需将 ssr 设置为 true
 - 混合渲染模式（SSR | CSR | SSG | SWR）：需在 routeRules 根据每个路由动态配置渲染模式（beta 版本）
+
+> [routerules](https://nitro.unjs.io/config#routerules)
+
+![image-20231114094806267](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231114094806267.png)
