--- a/Docker/云服务器.md
+++ b/Docker/云服务器.md
@@ -1,22 +1,28 @@
-## 使用须知
+# 云服务器-从零搭建前后端服务（自动化部署、数据库）
 
 ![image-20231120092259178](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231120092259178.png)
 
-- 选择0M带宽不能访问公网（不分配公网IP），如需分配公网IP请增加带宽值。
-- 云服务器ECS默认不开启虚拟内存如您需要使用请登录云服务器内部操作。[Linux开启swap（虚拟内存）](https://help.aliyun.com/document_detail/42534.html?spm=5176.6660585.vm-content.1.72b77992PbRdlu)、[Windows虚拟内存的设置](https://help.aliyun.com/document_detail/40995.html)
-- 若您购买了数据盘，请先挂载后使用。[Linux操作系统挂载数据盘方法](https://help.aliyun.com/document_detail/25426.html?spm=a2c4g.11186623.0.0.586f9b85Lf4fU7)、[Windows操作系统挂载数据盘方法](https://help.aliyun.com/document_detail/25418.html?spm=a2c4g.11186623.0.0.586f9b85X8N4sr)
-- 如您需要修改登录密码，请再ECS控制台对订购实例进行“重置密码“操作。请查看[操作指南](https://help.aliyun.com/document_detail/25439.html)
-- 如网站用于web访问，请及时备案。如需帮助，请查看[备案专区](http://beian.aliyun.com/)
-- 阿里云会不定期为您推送活动优惠以及业务通知，如需关闭消息或设置其他人接收消息，请前往 [消息中心](https://notifications.console.aliyun.com/#/subscribeMsg)进行管理
-- ECS使用中遇到环境部署、安全检测、服务器加速等问题，需要管理工具帮助，请查看[软件市场](http://market.aliyun.com/software)
-- 如您需要随时获取ECS资源信息，信息实时监控，请下载[阿里云APP](https://www.aliyun.com/aliyunapp/web/download)
-- 我们为您提供了专业免费的[第三方软件安装教程](https://smartservice.console.aliyun.com/service/service-center?accounttraceid=7e69e60d30a0463b99c1be88ef6375bcgita)，包含MySQL、宝塔、WordPress、Nginx等十余款常用软件，还可提问安装过程中遇到的异常问题。如无法自助完成安装，可购买[一对一专家服务](https://www.aliyun.com/service/one-to-one_expert_service)
-
 ## 免密登陆
+
+第一步就是能免密快速登录到服务器
+
+- 可以直接使用 FinalShell、MobaXterm 或 XShell 等进行连接
+
+如下方法是直接用命令行操作
 
 1. 安装 `Remote - SSH` 插件，即可在 VSCode 中进行配置
 
-2. 配置别名快速登录：ssh-config
+2. 配置别名快速登录：ssh-config（也可以直接找到本机的 .ssh 配置进行修改）
+
+   `Ctrl + Shift + P`，之后输入 ssh
+
+   ![image-20231124085538013](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124085538013.png)
+
+   点击配置 SSH 主机，随后的弹出框一般情况下点击一个就行
+
+   ![image-20231124085656952](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124085656952.png)
+
+   之后输入如下配置
 
    ```bash
    Host lyn
@@ -27,7 +33,7 @@
    $ ssh lyn
    ```
 
-3. 修改本地 config
+3. 之后我们希望能免密快速登录
 
    ```bash
    # 提示你输入密码，成功后可以直接 ssh 登陆
@@ -42,13 +48,17 @@
 
 ### 安装Java
 
-Jenkins 本身是依赖 Java 的，所以我们需要先安装 Java 环境
+#### 安装方法
+
+Jenkins 本身是依赖 Java 的，所以我们需要先安装 Java 环境。不过不太推荐使用命令行安装 java 环境
 
 - 注意：最新版本 Jenkins 需要使用 11-17 版本的 Java
 - 由于我使用的是 Alibaba Cloud Linux 3.2104 LTS 64位，就安装了 java-17-alibaba-dragonwel
 
 ```bash
+# 查询一下都有哪些 java-17 版本
 $ dnf search java-17
+# 根据提示的版本进行挑选下载
 $ dnf install java-17-alibaba-dragonwell.x86_64
 ```
 
@@ -59,6 +69,8 @@ $ dnf search java-1.8
 $ dnf install java-1.8.0-openjdk.x86_64
 ```
 
+**推荐安装方法**
+
 使用 dnf 安装的，很难找到 jdk 安装的位置，会有些小问题。还是推荐在官网下载，手动配置环境变量：[https://www.oracle.com/java/technologies/download](https://www.oracle.com/java/technologies/download)
 
 - jdk8，需要先注册 Oracle 账号才能下载，官网下载还是很快的
@@ -68,10 +80,13 @@ $ dnf install java-1.8.0-openjdk.x86_64
 ```bash
 $ tar -zxvf jdk-17_linux-x64_bin.tar.gz
 $ tar -zxvf jdk-8u391-linux-x64.tar.gz
+# 软件存放目录
 $ pwd
 /home/software/jdk-17.0.9/
 /home/software/jdk1.8.0_391/
 ```
+
+#### 修改配置
 
 修改环境变量文件
 
@@ -83,11 +98,19 @@ export PATH=$JAVA_HOME/bin:$PATH
 
 需要对应版本了，修改文件重新加载环境变量即可
 
+- 一般情况下是不需要修改的，各个软件也都能通过配置文件的形式选择你需要的 java 版本
+
 ```bash
 $ source /etc/profile
 ```
 
+检查是否配置成功
+
+![image-20231124084129062](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084129062.png)
+
 ### 安装Jenkins
+
+#### 安装方法
 
 ```bash
 $ dnf search jenkins
@@ -144,21 +167,33 @@ $ systemctl status jenkins
 $ systemctl enable jenkins
 ```
 
+检查是否启动成功
+
+![image-20231124084054138](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084054138.png)
+
+#### 修改配置
+
 修改 Jenkins 端口
 
+- 我环境变量默认使用的 jdk1.8，我安装的 jenkins 是新版需要配置 jdk11-17
 - 默认端口为 8080，我要改为 8081
 
 ```bash
-$ cd /usr/lib/systemd/system
-$ vim jenkins.service
+$ vim /usr/lib/systemd/system/jenkins.service
+# The Java home directory. When left empty, JENKINS_JAVA_CMD and PATH are consulted.
+Environment="JAVA_HOME=/home/software/jdk-17.0.9"
+# Port to listen on for HTTP requests. Set to -1 to disable.
+Environment="JENKINS_PORT=8081"
 ```
 
-![image-20231120102726327](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231120102726327.png)
+![image-20231123140910187](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231123140910187.png)
 
-重新加载配置文件
+重新加载配置文件，之后重启 jenkins
 
 ```bash
+# 重新加载 service 配置文件
 $ systemctl daemon-reload
+# 重启 jenkins
 $ systemctl restart jenkins
 ```
 
@@ -166,20 +201,52 @@ $ systemctl restart jenkins
 
 ![image-20231120103102460](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231120103102460.png)
 
-打开浏览器，输入 IP + 对应端口
+打开浏览器，输入 IP + 对应端口，之后需要解锁 Jenkins
 
-获取输入管理员密码，解锁 Jenkins
+- 获取输入管理员密码
 
 ```bash
 $ cat /var/lib/jenkins/secrets/initialAdminPassword
 fc53e288a4ac429baa33b44b412dd7a1
 ```
 
+#### 安装插件
+
 安装推荐插件即可
 
 ![image-20231120103330881](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231120103330881.png)
 
+额外插件安装：
+
+- 上面默认安装的插件就不再提及用途了
+
+| 插件名称                            | 插件用途                                   |
+| ----------------------------------- | ------------------------------------------ |
+| Maven Integration plugin            | Maven                                      |
+| Zentimestamp plugin                 | 时间戳变量                                 |
+| Build Name and Description Setter   | 自定义构建任务名称                         |
+| Persistent Parameter Plugin         | 持久化构建参数                             |
+| Role-based Authorization Strategy   | 用户权限管理插件                           |
+| Deploy to container Plugin          | 远程部署插件                               |
+| Generic Webhook Trigger Plugin      | 特定提交触发自动构建                       |
+| Publish Over SSH                    | 远程控制主机执行脚本                       |
+| Job Configuration History Plugin    | 记录job的历史更新记录                      |
+| Console Column Plugin               | 视图中展示上一个控制台                     |
+| Rebuilder                           | 按照上次构建所选的参数进行构建             |
+| Git Parameter                       | 可添加Git的branch或者tag来作为参数进行构建 |
+| Build Trigger Badge                 | 项目视图首页展示项目构建人                 |
+| Version Number Plugin               | 提供更加丰富的构建版本号                   |
+| Figlet Buildstep                    | 在构建过程中输出一个简单的横幅             |
+| Extended Choice Parameter Plugin    | 回滚使用的这个插件                         |
+| Docker Pipeline                     | pipeline中docker环境隔离的能力             |
+| Parameterized Remote Trigger Plugin | 远程触发另一个jenkins项目构建配置          |
+| Blue Ocean                          | 持续交付(CD)Pipeline过程的可视化           |
+| Simple Theme                        | 主题                                       |
+| DingTalk                            | 构建通知                                   |
+
 ### 安装Nginx
+
+#### 安装方法
 
 安装 Nginx，或者去官网直接下载
 
@@ -193,6 +260,89 @@ $ dnf install nginx
 
 ```bash
 $ systemctl start nginx
+$ systemctl stop nginx
+$ systemctl restart nginx
+$ systemctl status nginx
+$ systemctl enable nginx
+```
+
+检查是否启动成功
+
+![image-20231124084227034](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084227034.png)
+
+#### 修改配置
+
+修改配置文件
+
+```bash
+$ vim /etc/nginx/nginx.conf
+```
+
+增加压缩配置
+
+```nginx
+http {
+  gzip on;
+  gzip_min_length 1k;
+  gzip_comp_level 5;
+  gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
+  gzip_disable "MSIE [1-6]\.";
+  gzip_vary on;
+}
+```
+
+替换 `/usr/share/nginx/html` 里的 index.html
+
+```bash
+$ cd /usr/share/nginx/html
+```
+
+#### 80端口占用问题
+
+```bash
+$ netstat -nutlp | grep 80
+tcp6       0      0 :::80                   :::*                    LISTEN      1/systemd
+
+# 或者使用 lsof 查看端口
+$ yum install lsof
+lsof -i:80
+```
+
+![image-20231124162441635](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124162441635.png)
+
+解决方法：
+
+- 大概率是 httpd 的锅，关闭并禁用即可
+
+```bash
+# 停止进程
+$ systemctl stop httpd
+$ systemctl stop httpd.socket
+# 禁止随开机启动
+$ systemctl disable httpd
+$ systemctl disable httpd.socket
+```
+
+如果不使用 ipv6，直接在系统启动时禁用即可，这样也可以提高系统访问的速度
+
+```bash
+$ vim /etc/sysctl.conf
+net.ipv6.conf.all.disable_ipv6=1
+net.ipv6.conf.defalult.disable=1
+$ reboot
+```
+
+111 端口的进程是 systemd，实际上用的是 rpcbind，大部分服务是不依赖于rpcbind的，只有NFS需要用到这个服务，所以可以禁掉
+
+- systemd-resolve 系统服务解析主机名、IP 地址、域名、DNS 资源记录、服务
+
+![image-20231124164931990](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124164931990.png)
+
+```bash
+$ systemctl stop rpcbind.socket
+$ systemctl stop rpcbind
+$ systemctl disable rpcbind.socket
+$ systemctl disable rpcbind
 ```
 
 ### 安装Git
@@ -200,6 +350,10 @@ $ systemctl start nginx
 ```bash
 $ dnf install git-all
 ```
+
+检查是否安装成功
+
+![image-20231124084335807](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084335807.png)
 
 > [Linux下安装GitLab仓库，史上最详细的教程来啦~](https://blog.csdn.net/smilehappiness/article/details/106353324)
 
@@ -209,6 +363,8 @@ $ dnf install git-all
 
 ### 安装Maven
 
+#### 安装方法
+
 去官网下载或者使用 wget 下载到指定目录
 
 - [https://maven.apache.org/download.cgi](https://maven.apache.org/download.cgi)
@@ -217,13 +373,15 @@ $ dnf install git-all
 $ wget --no-check-certificate https://dlcdn.apache.org/maven/maven-3/3.9.5/binaries/apache-maven-3.9.5-bin.tar.gz
 ```
 
-并解压 maven 包
+解压 maven 包
 
 ```bash
 $ tar -zxvf apache-maven-3.9.5-bin.tar.gz -C ./
 $ pwd
 /home/software/apache-maven-3.9.5
 ```
+
+#### 修改配置
 
 配置环境变量
 
@@ -240,6 +398,10 @@ export PATH=$MAVEN_HOME/bin:$PATH
 ```bash
 $ source /etc/profile
 ```
+
+检查是否配置成功
+
+![image-20231124084410169](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084410169.png)
 
 配置镜像源
 
@@ -289,49 +451,49 @@ export PATH=$TOMCAT_HOME/bin:$PATH
 $ source /etc/profile
 ```
 
-## 其他环境
-
-### 安装Docker
-
-把 yum 包更新到最新，**不要随意更新**，因为我目前是新环境
+启动和关闭
 
 ```bash
-$ yum update
+$ startup.sh
+$ shutdown.sh
 ```
 
-安装软件包
+检查是否启动成功
+
+![image-20231124085238554](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124085238554.png)
+
+### 安装Nexus
+
+官网下载：[https://help.sonatype.com/repomanager3/product-information/download](https://help.sonatype.com/repomanager3/product-information/download)
+
+解压 nexus 包
 
 ```bash
-$ yum install -y yum-utils device-mapper-persistent-data lvm2
+$ tar -zxvf nexus-3.62.0-01.tar.gz
 ```
 
-设置 yum 源
+修运行 nexus 默认访问端口：
 
 ```bash
-$ yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
+$ vim /home/software/nexus-3.62.0-01/etc/nexus-default.properties
+application-port=8082
 ```
 
-查看所有仓库中所有 docker 版本，并选择特定版本安装
+注册服务
 
 ```bash
-$ yum list docker-ce --showduplicates | sort -r
+$ ln -s /home/software/nexus-3.62.0-01/bin/nexus /etc/init.d/nexus
+# 暂时先不设置开机自启了
+$ /etc/init.d/nexus start
 ```
 
-安装 docker
-
-```bash
-$ yum install -y docker-ce-24.0.6
-```
-
-启动 docker
-
-```bash
-$ systemctl start docker
-```
+## 数据库环境
 
 ### 安装PostgreSQL
 
 > [Linux下PostgreSQL安装部署详细步骤](https://blog.csdn.net/weixin_43230682/article/details/108403642)
+
+#### 安装方法
 
 安装方法参考官方文档：[https://www.postgresql.org/download/linux/redhat/](https://www.postgresql.org/download/linux/redhat/)
 
@@ -368,7 +530,7 @@ $ mkdir pgdata
 $ chmod 0700 pgdata
 ```
 
-**搭建主库**
+#### 搭建主库
 
 1. 配置环境变量
 
@@ -410,6 +572,7 @@ $ chmod 0700 pgdata
    $ pg_ctl start
    $ pg_ctl stop
    $ pg_ctl restart
+   $ pg_ctl status
    ```
 
 5. 修改数据库密码
@@ -424,6 +587,12 @@ $ chmod 0700 pgdata
    ```bash
    $ \q
    ```
+
+检查是否启动成功
+
+![image-20231124084635609](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084635609.png)
+
+#### 修改配置
 
 如果想要暴露数据库到外面，需要修改 `postgresql.conf` 文件
 
@@ -440,23 +609,209 @@ $ pg_ctl restart
 
 ### 安装Redis
 
+redis 是 c 语言开发，安装 redis 需要先将官网下载的源码进行编译，编译依赖 gcc 环境
+
+```bash
+$ yum install -y gcc gcc-c++
+```
+
 去官网下载或者使用 wget 下载到指定目录
 
 - [http://download.redis.io/releases/](http://download.redis.io/releases/)
+- 如果中途用 ctrl+c 暂停，可以使用`wget -c` 重新下载
 
-## 前端环境搭建
+```bash
+$ wget http://download.redis.io/releases/redis-4.0.6.tar.gz
+```
 
-### 安装Nvm
+解压 redis 包
+
+```bash
+$ tar -zxvf redis-4.0.6.tar.gz
+```
+
+编译
+
+```bash
+$ cd redis-4.0.6
+$ make
+```
+
+安装
+
+```bash
+$ make PREFIX=/usr/local/redis install
+```
+
+将 redis.conf 文件移动到
+
+```bash
+$ cp /home/software/redis-4.0.6/redis.conf /usr/local/redis/bin/
+```
+
+启动
+
+```bash
+$ cd /usr/local/redis/bin
+# 启动服务器
+$ ./redis.server redis.conf
+# 启动redis客户端
+$ ./redis-cli
+```
+
+![image-20231124083928737](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124083928737.png)
+
+### 安装MySQL
+
+安装 mysql
+
+```bash
+$ yum install -y mysql-server
+```
+
+如果没有可用软件包 mysql-server，可以使用如下方法
+
+```bash
+# 下载mysql的repo源
+$ wget http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
+# 安装rpm包，之后就有mysql repo源了
+$ rpm -ivh mysql-community-release-el7-5.noarch.rpm
+# 即可安装
+$ yum install -y mysql-server
+```
+
+启动 mysql 服务
+
+```bash
+$ systemctl start mysqld
+$ systemctl status mysqld
+```
+
+我这个版本 mysql 没有初始密码，如果有初始密码，可以通过如下命令去查看
+
+```bash
+$ find / -name mysqld.log
+/var/log/mysql/mysqld.log
+$ cat /var/log/mysql/mysqld.log | grep password
+```
+
+![image-20231127095213798](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231127095213798.png)
+
+登录，没有密码直接按回车即可登录
+
+```bash
+$ mysql -u root -p
+```
+
+登录之后更新 root 密码，之后并创建 admin 用户，并授权表和远程访问权限，授权完就可以使用 Navicat 进行连接了
+
+```sql
+# mysql8.0版本更新密码
+ALTER USER 'root'@'localhost' IDENTIFIED BY 'mysql@123';
+# 创建admin用户
+CREATE USER 'admin'@'%' IDENTIFIED BY 'admin@123';
+# 授权访问表
+GRANT ALL PRIVILEGES ON *.* TO 'admin'@'%';
+# 授权远程访问
+ALTER USER 'admin'@'%' IDENTIFIED WITH mysql_native_password BY 'admin@123';
+# 刷新
+FLUSH PRIVILEGES;
+
+# mysql5.6版本更新密码
+UPDATE user SET Password = PASSWORD('mysql@123') WHERE user = 'root';
+FLUSH PRIVILEGES;
+```
+
+### 安装MongoDB
+
+去官网选择对应版本进行下载
+
+- [https://www.mongodb.com/try/download/community](https://www.mongodb.com/try/download/community)
+
+![image-20231127105256517](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231127105256517.png)
+
+```bash
+$ tar -zxvf mongodb-linux-x86_64-rhel80-3.6.23.tgz
+```
+
+创建 logs 和 data 目录，创建 mongodb.log 文件
+
+```bash
+$ cd /usr/local/
+$ mkdir -p mongodb/logs mongodb/data
+$ touch /usr/local/mongodb/logs/mongodb.log
+```
+
+将解压的目前移动到 /usr/local/mongodb 目录下
+
+```bash
+$ mv mongodb-linux-x86_64-rhel80-3.6.23/* /usr/local/mongodb/
+```
+
+修改环境变量
+
+```bash
+$ vim /etc/profile
+export MONGODB_HOME=/usr/local/mongodb
+export PATH=$MONGODB_HOME/bin:$PATH
+$ source /etc/profile
+```
+
+编辑 mongodb.conf 文件
+
+```bash
+$ vim /etc/mongodb.conf
+# 指定数据库路径
+dbpath=/usr/local/mongodb/data
+# 指定MongoDB日志文件
+logpath=/usr/local/mongodb/logs/mongodb.log
+# 使用追加的方式写日志
+logappend=true
+# 端口号
+port=27017 
+# 方便外网访问
+bind_ip=0.0.0.0
+# 以守护进程的方式运行MongoDB，创建服务器进程
+fork=true
+```
+
+启动 mongodb
+
+```bash
+$ mongod -f /etc/mongodb.conf
+# 关闭
+$ mongod --shutdown -f /etc/mongodb.conf
+```
+
+登录 mongodb
+
+```bash
+$ mongo
+```
+
+创建用户
+
+```sql
+use admin;
+db.createUser({user:'root', pwd:'mongo@123', roles:[{role:'root', db:'admin'}]});
+db.createUser({user:'admin',pwd:'admin@123',roles:[{role:'root',db:'admin'}]});
+# 验证账号是否授权成功, 1 验证成功，0 验证失败
+db.auth("root","mongo@123");
+```
+
+## 前端环境
+
+### 安装Nvm、Node
 
 > [nvm Github](https://github.com/nvm-sh/nvm)
 
-直接下载可能会超时，没超时按 Github 安装方法即可
+直接下载可能会超时，没超时按 Github 安装方法即可（我是按超时的方法下载的）
 
 ```bash
 $ curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
 ```
 
-git clone 下载，之后把环境变量添加到对应文件
+**下载超时方法**：git clone 下载，之后把环境变量添加到对应文件
 
 ```bash
 $ git clone https://github.com/creationix/nvm.git ~/.nvm
@@ -465,11 +820,29 @@ $ echo "source ~/.nvm/nvm.sh" >> ~/.bashrc
 $ echo "source ~/.nvm/nvm.sh" >> ~/.profile
 ```
 
-安装依赖
+安装 node
 
 ```bash
-$ npm i -g pnpm
+$ nvm install 16.20.0
 ```
+
+安装 pnpm、serve 依赖
+
+```bash
+$ npm i -g pnpm yarn serve
+```
+
+设置 npm 镜像源
+
+```bash
+$ npm config set registry https://registry.npm.taobao.org
+$ yarn config set registry http://registry.npm.taobao.org
+$ pnpm config set registry http://registry.npm.taobao.org
+```
+
+检查是否安装成功
+
+![image-20231124084733942](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084733942.png)
 
 前端打 jar 包添加如下脚本命令：
 
@@ -481,6 +854,74 @@ $ npm i -g pnpm
 }
 ```
 
+## 其他环境
+
+### 安装Docker
+
+把 yum 包更新到最新，**不要随意更新**，因为我目前是新环境
+
+```bash
+$ yum update
+```
+
+安装软件包
+
+```bash
+$ yum install -y yum-utils device-mapper-persistent-data lvm2
+```
+
+设置 yum 源
+
+```bash
+$ yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
+```
+
+查看所有仓库中所有 docker 版本，并选择特定版本安装
+
+```bash
+$ yum list docker-ce --showduplicates | sort -r
+```
+
+安装 docker
+
+```bash
+$ yum install -y docker-ce-24.0.6
+```
+
+启动 docker
+
+```bash
+$ systemctl start docker
+$ systemctl stop docker
+$ systemctl status docker
+$ systemctl enable docker
+```
+
+检查是否启动成功
+
+![image-20231124084513385](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124084513385.png)
+
+### 安装Docker-compose
+
+去 github 下载或者使用 cul 下载到指定目录
+
+- 推荐下载：[https://github.com/docker/compose/releases/](https://github.com/docker/compose/releases/)
+
+```bash
+# 下载很慢
+$ curl -L "https://github.com/docker/compose/releases/download/v2.23.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+```
+
+下载后放到 `/usr/local/bin` 目录下，之后添加可执行权限
+
+```bash
+$ chmod -R 777 /usr/local/bin/docker-compose
+```
+
+检查是否安装成功
+
+![image-20231124100249909](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124100249909.png)
+
 ## 自动化脚本
 
 ### 修改对应配置文件
@@ -490,14 +931,20 @@ $ npm i -g pnpm
 - 我这边需要修改对应 pg 配置和对应服务的端口
 
 ```bash
+# 修改数据库配置
 $ vim /home/template/ticket-base/ticket-base-run/src/main/resources/application-pg-dev.yml
 db:
   url: ..
   username: ..
   password: ..
+
+# 修改spring配置
 $ vim /home/template/ticket-base/ticket-base-run/src/main/resources/application.yml
 server:
   port: 8080
+
+# 修改nginx配置
+$ vim /etc/nginx/nginx.conf
 ```
 
 ### 自动打包程序脚本
@@ -551,5 +998,32 @@ nohup java -jar $BASE/$FILE >/dev/null 2>&1 &
 echo 'java server starting...'
 ```
 
+## 绑定域名
 
+首先需要购买域名，并进行域名备案
+
+进入域名解析页面，点击新手引导
+
+![image-20231124103605024](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124103605024.png)
+
+之后勾选 `@`主机记录和 `www`主机记录，输入对应网站 IP 即可。等待几分钟即可绑定成功
+
+![image-20231124103717742](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124103717742.png)
+
+## 总结
+
+重启之后全部启动命令，包括：`systemctl enable <service_name>` 自动重启的命令
+
+```bash
+(root)
+$ systemctl start nginx
+$ systemctl start jenkins
+$ systemctl start mysqld
+$ /home/template/start.sh
+$ /etc/init.d/nexus start
+$ pm2 start /home/software/yapi/vendors/server/app.js
+
+(postgres)
+$ pg_ctl start
+```
 
