--- a/Vue3/10-Vue3组件化开发.md
+++ b/Vue3/10-Vue3组件化开发.md
@@ -1,4 +1,6 @@
-## Vue3组件化开发
+# Vue3组件化开发
+
+## 组件化开发1
 
 ### 组件拆分
 
@@ -233,7 +235,7 @@ export default {
 }
 ```
 
-## Vue3组件化开发2
+## 组件化开发2
 
 ### Provide/Inject
 
@@ -566,7 +568,7 @@ export default {
 </show-names>
 ```
 
-## Vue3组件化开发3
+## 组件化开发3
 
 ### 动态组件
 
