--- a/JavaScriptDeep/2.2TypeScript语言.md
+++ b/JavaScriptDeep/2.2TypeScript语言.md
@@ -337,7 +337,7 @@ yarn tsc --init
 yarn tsc --locale zh-CN
 ```
 
-### ![typescript编译错误中文显示](C:\Users\suncu\Desktop\typescript编译错误中文显示.png)原始类型
+### 原始类型
 
 **ES6 数据类型**
 
