--- a/Network/11-其他协议.md
+++ b/Network/11-其他协议.md
@@ -1,3 +1,5 @@
+# 其他协议
+
 ## 补充协议
 
 ### RARP
@@ -533,7 +535,7 @@ IPv6 地址为 128 bit，每 16bit 一组，共 8 组
 
 - 有 40 字节的固定首部
 
-![image-20230804152637998](E:\learn\lagouBigFront\md\Network\img\image-20230804152637998.png)
+![image-20230804152637998](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230804152637998.png)
 
 ![image-20230804152820868](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230804152820868.png)
 
