--- a/React/11-项目搭建.md
+++ b/React/11-项目搭建.md
@@ -249,7 +249,7 @@ $ npm i classnames
 
 useState 传入的初始值只有再组件第一次被渲染时才是有效的
 
-![image-20230104104139046](E:\learn\lagouBigFront\md\React\img\image-20230104104139046.png)
+![image-20230104104139046](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230104104139046.png)
 
 解决思路：
 
