--- a/Docker/1.Nginx核心.md
+++ b/Docker/1.Nginx核心.md
@@ -29,6 +29,16 @@ Nginx 市场占有率
    - 负载均衡
 3. API 服务
    - OpenResty
+   - API 网关
+     - 身份验证
+     - 访问授权
+     - 流量加解密
+     - 流量控制
+     - 流量调度
+     - 日志记录
+     - 指标监控
+
+一个 web 请求会先经过 nginx，再到应用服务（比如：tomcat、django），然后去访问 redis、mysql 数据库提供基本数据功能。这里有一个问题，应用服务要求开发效率高，所以它的运行效率是很低的，它 QPS（Queries Per Second，每秒查询率，最大吞吐量）、TPS（Transactions Per Second。事务数/秒）、并发是受限的，所以会把很多应用服务组成一个集群，为用户提供高可用性。一旦服务构成集群，就需要 nginx 具有反向代理功能。应用服务构成集群带来两个需求，一个是动态扩容，另一个是出问题要做容灾，所以反向代理要具备负载均衡功能
 
 ![image-20240204141918639](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240204141918639.png)
 
@@ -44,6 +54,13 @@ Nginx 市场占有率
 
 ## Nginx组成
 
+比如有一辆汽车，需要有驾驶员控制汽车往哪里开，汽车经过的地方还会形成gps轨迹，如果汽车出现事故还需要黑匣子分析定位问题
+
+- Nginx 二进制文件 -> 汽车本身
+- Nginx.conf -> 驾驶员
+- access.log -> 轨迹
+- error.log -> 错误
+
 ![image-20240204143649138](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240204143649138.png)
 
 ### Nginx配置语法
@@ -56,25 +73,29 @@ Nginx 市场占有率
 6. 使用 $ 符号使用变量
 7. 部分指令的参数支持正则表达式
 
-![image-20240204155517454](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240204155517454.png)
+![image-20240223092653978](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240223092653978.png)
 
 配置参数：时间的单位
 
-- ms: milliseconds
-- d: days
-- s: seconds
-- w: weeks
-- m: minutes
-- M: months,30 days
-- h: hours
-- y: years,364 days
+| 单位 | 含义                      |
+| ---- | ------------------------- |
+| ms   | 毫秒 milliseconds         |
+| s    | 秒 seconds                |
+| m    | 分钟 minutes              |
+| h    | 小时 hours                |
+| d    | 天 days                   |
+| w    | 周 weeks                  |
+| M    | 月，30天 months, 30 days  |
+| y    | 年，365天 years, 365 days |
 
 配置参数：空间的单位
 
--  bytes
-- k/K kilobytes
-- m/M megabytes
-- g/G gigabytes
+| 单位 | 含义               |
+| ---- | ------------------ |
+|      | 字节 bytes         |
+| k/K  | 千字节 kilobytes   |
+| m/M  | 兆字节 megabytes   |
+| g/G  | 千兆字节 gigabytes |
 
 ### Nginx配置指令块
 
@@ -82,8 +103,6 @@ Nginx 市场占有率
 - server
 - location
 - upstream
-
-![image-20240204155517454](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240204155517454.png)
 
 ### Nginx命令行
 
