--- a/Docker/2.Nginx架构.md
+++ b/Docker/2.Nginx架构.md
@@ -16,7 +16,7 @@
 为什么 Nginx 采用多进程结构而不是多线程结构：
 
 - 保证高可用性和高可靠性
-  - 因为多线程之间共享同一个地址空间，所以当某一个第三方模块引发地址空间导致得段错误时，在地址越界出现时会导致整个 Ngxin 进程全部挂掉
+  - 因为多线程之间共享同一个地址空间，所以当某一个第三方模块引发地址空间导致得段错误时，在地址越界出现时会导致整个 Nginx 进程全部挂掉
   - 而当我们使用多进程这样的一个 Nginx 进程模型时,往往不会出现这样的一个问题
 - 通常第三方模块是不会在 master 进程这里加上自己的功能代码的
   - master 进程它被设计用来的目的就是做 worker 进程的管理的
@@ -32,6 +32,22 @@
 
 
 ![image-20240219174018359](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240219174018359.png)
+
+master 进程
+
+1. 启动时检查 nginx.conf 是否正确，语法错误
+2. 根据配置文件的参数创建、且监控 worker 进程的数量和状态
+3. 监听 socket，接收 client 发起的请求，然后 worker 竞争抢夺链接，获胜的可以处理且响应请求
+4. 接收发送的管理 nginx 进程的信号，并且将信号通知到 worker 进程
+5. 如果发送了 reload 命令，则读取新配置文件，创建新的 worker 进程，结束旧的 worker 进程
+
+worker 进程
+
+1. 实际处理 client 网络请求的是 worker
+1. master 根据 nginx.conf 决定 worker 的数量
+1. 有 client 用户请求到达时，worker 之间进程竞争，获胜者和 client 建立连接且处理用户请求
+1. 接收用户请求后，若需要代理转发给后端，则后端处理完毕后接收处理结果，再响应给用户
+1. 接收并处理 master 发来的进程信号，如：启动、重启、重载、停止
 
 ## 流程
 
@@ -59,4 +75,30 @@
 
 ![image-20240219175914415](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240219175914415.png)
 
+### epoll
+
 ![image-20240219180144467](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240219180144467.png)
+
+### 请求间切换
+
+![image-20240220102505550](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240220102505550.png)
+
+### 阻塞
+
+阻塞与非阻塞
+
+- 阻塞：操作系统或底层C库提供的方法或系统调用，调用的方法可能会导致进程进入睡眠状态，为什么会进入睡眠状态？因为当前条件不满足情况下，操作系统主动把进程切换到另一个进程
+- 非阻塞：调用该方法永远不会因为时间片未用完时把进程主动切换掉
+
+![image-20240220104025382](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240220104025382.png)
+
+![image-20240220104048022](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240220104048022.png)
+
+## Nginx模块
+
+1. 前提：编译进 Nginx
+2. 提供哪些配置项
+3. 模块何时被使用
+4. 提供哪些变量
+
+![image-20240220112408392](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240220112408392.png)
