--- a/k8s/7.离线安装KubeSphere.md
+++ b/k8s/7.离线安装KubeSphere.md
@@ -936,7 +936,7 @@ kubectl get nodes
 >   $ systemctl restart network
 >   ```
 >
-> - 类似其他情况可参考：[如何排查解决：The connection to the server <HOST>:6443 was refused - did you specify the right host or port](https://zhuanlan.zhihu.com/p/646238661)
+> - 类似其他情况可参考：[如何排查解决：The connection to the server: 6443 was refused - did you specify the right host or port](https://zhuanlan.zhihu.com/p/646238661)
 >
 > 问题3：可能是网络原因问题
 >
@@ -1027,14 +1027,12 @@ kubectl get nodes
 >   kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml --request-timeout='0'
 >   ```
 >   
-> - 
->
 > 问题7：无法登陆
 >
 > ```bash
-> request to http://ks-apiserver/oauth/token failed, reason: connect ECONNREFUSED 10.233.51.80:80
+>request to http://ks-apiserver/oauth/token failed, reason: connect ECONNREFUSED 10.233.51.80:80
 > ```
->
+> 
 > ![image-20240219163706624](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240219163706624.png)
 >
 > - 网上解决方案：重启虚拟机（未解决）
@@ -1042,11 +1040,11 @@ kubectl get nodes
 >   ```bash
 >   kubectl get pod -n kubesphere-system
 >   ```
->   
+> 
 >   查看之后发现容器正在建立中...
 >   
->   ![image-20240220092736527](C:\Users\suncu\AppData\Roaming\Typora\typora-user-images\image-20240220092736527.png)
->
+>   ![image-20240220092736527](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240220092736527.png)
+>   
 
 
 
