--- a/React-/1.React理念.md
+++ b/React-/1.React理念.md
@@ -49,10 +49,142 @@ JS脚本执行 -----  样式布局 ----- 样式绘制
 
 - 比如：切换页面时，先在当前页面停留了一小段时间，这一小段时间被用来请求数据，这段时间足够短时，用户是无感知的，如果超过一个范围，再显示 loading 效果
 
-## 老React架构
+## React架构
+
+### 老React架构
 
 React15 架构可以分为两层：
 
 - Reconciler（协调器）—— 负责找出变化的组件
 - Renderer（渲染器）—— 负责将变化的组件渲染到页面上
 
+**Reconciler（协调器）**
+
+在`React`中可以通过`this.setState`、`this.forceUpdate`、`ReactDOM.render`等 API 触发更新，每当有更新发生，Reconciler 会做如下工作：
+
+- 调用函数组件、或 class 组件的`render`方法，将返回的 JSX 转化为虚拟 DOM
+- 将虚拟 DOM 和上次更新时的虚拟 DOM 对比
+- 通过对比找出本次更新中变化的虚拟 DOM
+- 通知 **Renderer** 将变化的虚拟 DOM 渲染到页面上
+
+**Renderer（渲染器）**
+
+由于`React`支持跨平台，所以不同平台有不同的 **Renderer**
+
+- ReactDOM 渲染器，渲染到浏览器环境
+- ReactNative 渲染器，渲染 App 原生组件
+- ReactTest 渲染器，渲染出纯 Js 对象用于测试
+- ReactArt 渲染器，渲染到 Canvas, SVG 或 VML (IE8)
+
+React15 架构缺点：
+
+在 **Reconciler** 中，`mount`的组件会调用 [mountComponent](https://github.com/facebook/react/blob/15-stable/src/renderers/dom/shared/ReactDOMComponent.js#L498)，`update`的组件会调用 [updateComponent](https://github.com/facebook/react/blob/15-stable/src/renderers/dom/shared/ReactDOMComponent.js#L877)。这两个方法都会递归更新子组件
+
+由于递归执行，所以更新一旦开始，中途就无法中断。当层级很深时，递归更新时间超过了 16ms，用户交互就会卡顿
+
+如下示例为，点击按钮页面展示数字翻倍，如果中途被中断，用户本来期望`123`变为`246`。实际却看见更新不完全的 DOM！（即`223`）
+
+![image-20240304105000836](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240304105000836.png)
+
+基于这个原因，`React`决定重写整个架构
+
+### 新React架构
+
+React16 架构可以分为三层：
+
+- Scheduler（调度器）—— 调度任务的优先级，高优任务优先进入 **Reconciler**
+- Reconciler（协调器）—— 负责找出变化的组件
+- Renderer（渲染器）—— 负责将变化的组件渲染到页面上
+
+**Schedulelr（调度器）**
+
+以浏览器是否有剩余时间作为任务中断的标准，那么我们需要一种机制，当浏览器有剩余时间时通知我们，大部分浏览器已经实现了这个 API，就是 requestIdleCallback，但是由于一下因素，React 放弃使用：
+
+- 浏览器兼容性
+- 触发频率不稳定，受很多因素影响。比如当我们的浏览器切换 tab 后，之前 tab 注册的`requestIdleCallback`触发的频率会变得很低
+
+基于以上原因，`React`实现了功能更完备的`requestIdleCallback`polyfill，这就是 **Scheduler**
+
+**Reconciler（协调器）**
+
+React16 的 Reconciler 把更新工作从递归变成了可以中断的循环过程。每次循环都会调用`shouldYield`判断当前是否有剩余时间
+
+在 React16 中，**Reconciler** 与 **Renderer** 不再是交替工作。当 **Scheduler** 将任务交给 **Reconciler** 后，**Reconciler** 会为变化的虚拟 DOM 打上代表增/删/更新的标记
+
+**Renderer（渲染器）**
+
+React16 更新流程如下：
+
+![image-20240304104122362](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240304104122362.png)
+
+### Fiber架构
+
+React核心团队成员[Sebastian Markbåge](https://github.com/sebmarkbage/)（`React Hooks`的发明者）曾说：我们在`React`中做的就是践行`代数效应`
+
+`代数效应`是`函数式编程`中的一个概念，用于将`副作用`从`函数`调用中分离
+
+我们虚构一个类似`try...catch`的语法 —— `try...handle`与两个操作符`perform`、`resume`
+
+```js
+function getPicNum(name) {
+  const picNum = perform name;
+  return picNum;
+}
+
+try {
+  getTotalPicNum('kaSong', 'xiaoMing');
+} handle (who) {
+  switch (who) {
+    case 'kaSong':
+      resume with 230;
+    case 'xiaoMing':
+      resume with 122;
+    default:
+      resume with 0;
+  }
+}
+```
+
+从`React15`到`React16`，协调器（`Reconciler`）重构的一大目的是：将老的`同步更新`的架构变为`异步可中断更新`
+
+`异步可中断更新`可以理解为：`更新`在执行过程中可能会被打断（浏览器时间分片用尽或有更高优任务插队），当可以继续执行时恢复之前执行的中间状态
+
+这就是`代数效应`中`try...handle`的作用
+
+`Fiber`并不是计算机术语中的新名词，他的中文翻译叫做`纤程`，与进程（Process）、线程（Thread）、协程（Coroutine）同为程序执行过程。
+
+在很多文章中将`纤程`理解为`协程`的一种实现。在`JS`中，`协程`的实现便是`Generator`
+
+但是`Generator`的一些缺陷使`React`团队放弃了他：
+
+- 类似`async`，`Generator`也是`传染性`的，使用了`Generator`则上下文的其他函数也需要作出改变。这样心智负担比较重
+
+- `Generator`执行的`中间状态`是上下文关联的
+
+  使用`Fiber`的初衷：1.更新可以中断并继续。2.更新可以有不同的优先级，高优先可以打断低优先
+
+## Fiber实现原理
+
+### Fiber含义
+
+`Fiber`包含三层含义：
+
+1. 作为架构来说，之前`React15`的`Reconciler`采用递归的方式执行，数据保存在递归调用栈中，所以被称为`stack Reconciler`。`React16`的`Reconciler`基于`Fiber节点`实现，被称为`Fiber Reconciler`
+2. 作为静态的数据结构来说，每个`Fiber节点`对应一个`React element`，保存了该组件的类型（函数组件/类组件/原生组件...）、对应的DOM节点等信息
+3. 作为动态的工作单元来说，每个`Fiber节点`保存了本次更新中该组件改变的状态、要执行的工作（需要被删除/被插入页面中/被更新...）
+
+### 双缓存
+
+当我们用`canvas`绘制动画，每一帧绘制前都会调用`ctx.clearRect`清除上一帧的画面
+
+如果当前帧画面计算量比较大，导致清除上一帧画面到绘制当前帧画面之间有较长间隙，就会出现白屏
+
+为了解决这个问题，我们可以在内存中绘制当前帧动画，绘制完毕后直接用当前帧替换上一帧画面，由于省去了两帧替换间的计算时间，不会出现从白屏到出现画面的闪烁情况。
+
+这种**在内存中构建并直接替换**的技术叫做双缓存
+
+在`React`中最多会同时存在两棵`Fiber树`。当前屏幕上显示内容对应的`Fiber树`称为`current Fiber树`，正在内存中构建的`Fiber树`称为`workInProgress Fiber树`
+
+![image-20240304170451876](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240304170451876.png)
+
+![image-20240304170610370](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240304170610370.png)
