--- a/JavaScriptDeep/V8.md
+++ b/JavaScriptDeep/V8.md
@@ -58,4 +58,79 @@ V8 引擎还使用其他优化技术，在当时遥遥领先
    const newObj = createObject()
    ```
 
-   
+
+## V8引擎如何运行
+
+V8 引擎使用 C++ 编写的，内部运行着一下的一些线程：
+
+- 有一个主线程负责加载、编译、运行JS代码
+- 有一个线程用于优化和编译
+- 有一个线程仅用于反馈，告诉 runtime 哪些方法需要进一步优化
+- 少量线程用于处理垃圾回收
+
+![image-20240313093848322](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240313093848322.png)
+
+为什么有 de-optimization（去优化），是因为有时候优化的代码可能有问题，那么就不优化了，直接执行未优化的字节码
+
+> [关于 V8 引擎你必须知道的基础知识](https://juejin.cn/post/7329164061391536163)
+>
+> [Node.js 的架构知识](https://juejin.cn/post/7329720175614722100#heading-6)
+
+## 垃圾回收算法
+
+### 垃圾回收
+
+垃圾回收是如何实现的？大致可以分为以下几个步骤：
+
+1. 通过 GC Root 标记空间中活动对象和非活动对象
+
+   V8 采用的可访问性（reahability）算法来判断堆中的对象是否为活动对象
+
+   - GC Root 能够遍历到的对象，是可访问的（reachable），称为活动对象
+   - GC Root 不能遍历到的对象，认为是不可访问的（unreachable），称为非活动对象
+
+   在浏览器环境中，GC Root 有很多，通常包括以下几种：
+
+   - 全局的 window 对象（位于每个 iframe 中）
+   - 文档 DOM 树，由可以通过遍历文档到达的所有原生 DOM 节点组成
+   - 存放栈上变量
+
+2. 回收非活动对象所占据的内存
+
+3. 回收后，做内存整理（可选，因为有的垃圾回收器不会产生内存碎片，比如：副垃圾回收器）
+
+   - 一般来说，频繁回收对象后，内存中就会存在大量不连续空间，我们把这些不连续的内存空间称为内存碎片
+   - 如果存在大量内存碎片，且需要分配大量连续内存时，就可能出现内存不足情况
+
+### V8垃圾回收
+
+> [https://v8.dev/blog/trash-talk](https://v8.dev/blog/trash-talk)
+
+V8 受代际假说影响，采用了两个垃圾回收器：主垃圾回收器（Major GC）和副垃圾回收器（Minor GC）
+
+代际假说主要特点：
+
+1. 大部分对象都是 "朝生夕死" 的，也就是说大部分对象在内存中存活的时间很短，比如函数内部声明的变量，或者块级作用域中的变量，当函数或者代码块执行结束时，作用域中定义的变量就会被销毁。因此这一类对象一经分配内存，很快就变得不可访问
+2. 不死的对象，会活得更久，比如全局的 window、DOM、Web API 等对象
+
+V8 会把堆分为新生代和老生代两个区域
+
+- 新生代：存放生存时间短的对象
+
+  - 容量：1~8M
+
+  - 使用副垃圾回收器（Minor GC）
+
+  - 使用 Scavenge 算法，将新生代区域划分为两部分
+
+    - 对象区域（from-sapce）
+    - 空闲区域（to-space）
+
+    新加入的对象都会存放到对象区域，当对象区域快被写满时，就需要执行一次垃圾清理操作
+
+    在垃圾回收过程中，首先要对对象区域中的垃圾做标记，标记完成之后，就会进入垃圾清理阶段。副垃圾回收器会把这些存活的对象复制到空闲区域中，同时还会把这些对象有序的排列起来
+
+- 老生代：存放生存时间长的对象
+
+  - 容量大得多
+  - 使用主垃圾回收器（Major GC）
