--- a/React-/1.React理念.md
+++ b/React-/1.React理念.md
@@ -183,8 +183,48 @@ try {
 
 这种**在内存中构建并直接替换**的技术叫做双缓存
 
-在`React`中最多会同时存在两棵`Fiber树`。当前屏幕上显示内容对应的`Fiber树`称为`current Fiber树`，正在内存中构建的`Fiber树`称为`workInProgress Fiber树`
+在`React`中最多会同时存在两棵`Fiber树`。当前屏幕上显示内容对应的`Fiber树`称为`current Fiber树`，正在内存中构建的`Fiber树`称为`workInProgress Fiber树`。他们用过`alternate`属性连接
 
 ![image-20240304170451876](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240304170451876.png)
 
+当`workInProgress Fiber树`构建完成交给`Renderer`渲染在页面上后，应用根节点的`current`指针指向`workInProgress Fiber树`
+
+![image-20240313160930659](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240313160930659.png)
+
+每次状态更新都会产生新的`workInProgress Fiber树`，通过`current`与`workInProgress`的替换，完成`DOM`更新
+
 ![image-20240304170610370](https://gitee.com/lilyn/pic/raw/master/md-img/image-20240304170610370.png)
+
+## 源码调式
+
+拉取 react 代码
+
+```bash
+git clone https://gitee.com/kasong/react.git
+```
+
+为`react`、`react-dom`创建`yarn link`
+
+```bash
+# 申明react指向
+cd node_modules/react
+yarn link
+# 申明react-dom指向
+cd ../react-dom
+yarn link
+```
+
+创建项目
+
+```bash
+npx create-react-app segmentfault-react-demo
+cd segmentfault-react-demo
+```
+
+将`react`与`react-dom`2个包指向刚才申明的包
+
+```bash
+yarn link react react-dom
+yarn start
+```
+
